--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,34 @@ body {
     background-color: grey;
     color: white}
 
-.car-avatar{
-    width:150px;
-    height:150px;
-    object-fit: cover;
+h1 {
+    width:500px;
+    margin: 0 auto;
+    background: gray;
+    text-align: center;
+    }
+
+.spidey-avatar {
+    width:200px;
+    height: 200px;
+}
+
+#searchBar {
+    width: 100%;
+    height: 32px;
+    border-radius: 3px;
+    border: 1px solid #eaeaea;
+    padding: 5px 10px;
+    font-size: 12px;
+}
+
+#searchWrapper {
+    position: relative;
+}
+
+#searchWrapper::after {
+    content: '🔍';
+    position: absolute;
+    top: 7px;
+    right: 15px;
 }
